--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -65,11 +65,11 @@
           
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label">Assign to Department<span style="color: red; font-weight: bolder;">*</span></label>
-            <div class="col-sm-10">
+            <div class="col-sm-3">
               <div>
                 <p-multiSelect [options]="departments" class="custom-ms" [(ngModel)]="selectedDepartments" [filter]="true" defaultLabel="Select Department"
                                name="department" id="department" display="chip" optionLabel="DepartmentName" optionValue="DepartmentName" [resetFilterOnHide]="true"
-                               #departmentInput="ngModel" [required]="true"  [disabled]="viewMode">
+                               #departmentInput="ngModel" [required]="true"  [disabled]="viewMode" [maxSelectedLabels]="100">
                 </p-multiSelect>
                 <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
                   Select Department.
