--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -113,7 +113,7 @@
               </div>
             </div>
           </div>
-          <div class="form-group row" *ngIf="print.workflow==''">
+          <div class="form-group row" *ngIf="!editMode && !viewMode">
             <label for="prefix" class="col-sm-2 col-form-label">
               Workflow<span style="color: red; font-weight: bolder;">*</span>
             </label>
