Latest Build fron this Branch

--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -318,18 +318,18 @@
       
      
 
-      <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
+      <!-- <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
         <h5 class="page-card-title">Body Template</h5>
         <div class="template-block">
-          <!-- <div class="template-grid"> -->
+        
 
           <form [formGroup]="form" id="bodyid">
             <ejs-richtexteditor formControlName="html" [(ngModel)]="pages[this.currentPage].text" id='defaultRTE' [fontFamily]='fontFamily' [toolbarSettings]='tools' [pasteCleanupSettings]="pasteCleanupSettings" [quickToolbarSettings]='quickToolbarSettings' [fontSize]='size'>
             </ejs-richtexteditor>
           </form>
-          <!-- </div> -->
+         
           <div class="form-group row my-4">
-            <!-- style="margin-left: 29.666667%;" -->
+         
             <div class="col-sm-10 offset-sm-2">
 
               <label for="templateName" class="col-sm-3 col-form-label">Page No. {{currentPage + 1}}/{{templateForm.Pages}}</label>
@@ -342,7 +342,7 @@
 
           </div>
         </div>
-    </div>
+    </div> -->
       
     <div class="form-group row my-4">
   <div class="col-sm-10 offset-sm-2">
