--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -217,7 +217,7 @@
         <button type="button" class="btn btn-secondary" (click)="modalRef!.hide()">Close</button>
         <button type="button" class="btn btn-success" (click)="confirmApproval()">Approve</button>
         <button type="button" class="btn btn-primary" (click)="confirmReturn()">Return</button>
-        <button type="button" class="btn btn-danger" (click)="confirmReject()">Reject</button>
+        <!--<button type="button" class="btn btn-danger" (click)="confirmReject()">Reject</button>-->
       </div>
     </div>
   </div>
