--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
@@ -1,101 +1,96 @@
 <div class="container-fluid">
-    <div class="row p-2">
-      <div class="col">
-        <h4 class="page-title">Change Password</h4>
-      </div>
+  <div class="row p-2">
+    <div class="col">
+      <h4 class="page-title">Change Password</h4>
     </div>
-    <div class="row p-2">
-      <div class="col">
-    <form (ngSubmit)="changePassword()" #fm="ngForm">
+  </div>
+  <div class="row p-2">
+    <div class="col">
+      <form (ngSubmit)="changePassword()" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
-      <div class="form-group row">
-        <label for="currentPassword" class="col-sm-2 col-form-label">Current Password:</label>
-        <div class="col-sm-3">
-        <input
-          type="password"
-          id="currentPassword"
-          name="currentPassword"
-          class="form-control"
-          [(ngModel)]="currentPassword"
-          required  #currentPasswordInput="ngModel"
-        />
-        <div *ngIf="currentPasswordInput.invalid && (currentPasswordInput.dirty || currentPasswordInput.touched)" class="text-danger">
-            Current Password is required.
+          <div class="form-group row">
+            <label for="currentPassword" class="col-sm-2 col-form-label">Current Password:</label>
+            <div class="col-sm-3">
+              <input type="password" id="currentPassword" name="currentPassword" class="form-control"
+                [(ngModel)]="currentPassword" required #currentPasswordInput="ngModel" />
+              <div *ngIf="currentPasswordInput.invalid && (currentPasswordInput.dirty || currentPasswordInput.touched)"
+                class="text-danger">
+                Current Password is required.
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="newPassword" class="col-sm-2 col-form-label">New Password:</label>
-        <div class="col-sm-3">
-        <input
-          type="password"
-          id="newPassword"
-          name="newPassword"
-          class="form-control"
-          [(ngModel)]="newPassword" maxlength="12"
-          required required  #newPasswordInput="ngModel"
-        />
-        <span *ngIf="newPassword" class="password-complexity">
-          Password complexity: 
-          <span [ngClass]="getPasswordComplexityClass(newPassword)">
-              {{ getPasswordComplexityText(newPassword) }}
-          </span>
-      </span>
-        <div *ngIf="newPasswordInput.invalid && (newPasswordInput.dirty || newPasswordInput.touched)" class="text-danger">
-            New Password is required.
+          <div class="form-group row">
+            <label for="newPassword" class="col-sm-2 col-form-label">New
+              Password:{{securityType.MinimumPasswordLength}}</label>
+            <div class="col-sm-3">
+              <input type="password" id="newPassword" name="newPassword" class="form-control" [(ngModel)]="newPassword"
+                minlength="{{securityType.MinimumPasswordLength}}" 
+                pattern="^(?=.*[A-Z])(?=.*[\W_])(?=.*\d).{8,12}$"
+                maxlength="12" required
+                #newPasswordInput="ngModel" />
+              <span *ngIf="newPassword" class="password-complexity">
+                Password complexity:
+                <span [ngClass]="getPasswordComplexityClass(newPassword)">
+                  {{ getPasswordComplexityText(newPassword) }}
+                </span>
+              </span>
+              <div *ngIf="newPasswordInput.invalid && (newPasswordInput.dirty || newPasswordInput.touched) && newPasswordInput.value.length ==0"
+                class="text-danger">
+                New Password is required.
+              </div>
+              <div *ngIf="newPasswordInput.invalid  && newPasswordInput.value.length > 0" class="text-danger">
+                Password must have<br/>
+                1 uppercase letter,<br/>
+                1 special character,<br/>
+                1 number, and<br/>
+                length between 8 to 12 characters
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password:</label>
-        <div class="col-sm-3">
-        <input
-          type="password"
-          id="confirmNewPassword"
-          name="confirmNewPassword"
-          class="form-control"
-          [(ngModel)]="confirmNewPassword" maxlength="12"
-          required #confirmNewPasswordInput="ngModel"
-        />
-        <span *ngIf="confirmNewPassword" class="password-complexity">
-          Password complexity: 
-          <span [ngClass]="getPasswordComplexityClass(confirmNewPassword)">
-              {{ getPasswordComplexityText(confirmNewPassword) }}
-          </span>
-      </span>
-        <div *ngIf="confirmNewPasswordInput.invalid && (confirmNewPasswordInput.dirty || confirmNewPasswordInput.touched)" class="text-danger">
-            Confirm new Password is required.
+          <div class="form-group row">
+            <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password:</label>
+            <div class="col-sm-3">
+              <input type="password" id="confirmNewPassword" name="confirmNewPassword" class="form-control"
+                [(ngModel)]="confirmNewPassword" minlength="{{securityType.MinimumPasswordLength}}" maxlength="12"
+                required #confirmNewPasswordInput="ngModel" />
+              <span *ngIf="confirmNewPassword" class="password-complexity">
+                Password complexity:
+                <span [ngClass]="getPasswordComplexityClass(confirmNewPassword)">
+                  {{ getPasswordComplexityText(confirmNewPassword) }}
+                </span>
+              </span>
+              <div
+                *ngIf="confirmNewPasswordInput.invalid && (confirmNewPasswordInput.dirty || confirmNewPasswordInput.touched)"
+                class="text-danger">
+                Confirm new Password is required.
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
         </div>
         <div class="form-group row my-4">
-            <div class="col-sm-10 offset-sm-2">
-                <button *ngIf="!issidebardisabled" type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()" >
-                    Cancel
-                  </button>
-      <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid">Change Password</button>
-            </div>
+          <div class="col-sm-10 offset-sm-2">
+            <button *ngIf="!issidebardisabled" type="button" class="btn btn-outline-secondary mx-2"
+              (click)="onCancel()">
+              Cancel
+            </button>
+            <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid">Change Password</button>
+          </div>
         </div>
-    </form>
-</div>
+      </form>
+    </div>
 
-</div>
-<div class="row p-2" *ngIf="isadmin">
-  <div class="col">
-<form (ngSubmit)="changePasswordOther()" #fm1="ngForm">
-    <div class="p-4 bg-white shadow-dark rounded-2">
-  <div class="form-group row">
-    <label for="currentPassword" class="col-sm-2 col-form-label">Select User:</label>
-    <div class="col-sm-10">
-       <p-dropdown
-              name="UserID"
-              [options]="griddata"
-              [(ngModel)]="otherUser" 
-              optionLabel="UserID" placeholder="Select a User"
-            >
-            </p-dropdown>
-    <!-- <input
+  </div>
+  <div class="row p-2" *ngIf="isadmin">
+    <div class="col">
+      <form (ngSubmit)="changePasswordOther()" #fm1="ngForm">
+        <div class="p-4 bg-white shadow-dark rounded-2">
+          <div class="form-group row">
+            <label for="currentPassword" class="col-sm-2 col-form-label">Select User:</label>
+            <div class="col-sm-10">
+              <p-dropdown name="UserID" [options]="griddata" [(ngModel)]="otherUser" optionLabel="UserID"
+                placeholder="Select a User">
+              </p-dropdown>
+              <!-- <input
       type="password"
       id="currentPassword"
       name="currentPassword"
@@ -106,65 +101,53 @@
     <div *ngIf="currentPasswordInput.invalid && (currentPasswordInput.dirty || currentPasswordInput.touched)" class="text-danger">
         Current Password is required.
       </div> -->
-    </div>
-  </div>
-  <div class="form-group row">
-    <label for="newPassword1" class="col-sm-2 col-form-label">New Password:</label>
-    <div class="col-sm-3">
-      <input
-        type="password"
-        id="newPassword1"
-        name="newPassword1"
-        class="form-control"
-        [(ngModel)]="newPassword1"
-        maxlength="12"
-        required
-        #newPassword1Input="ngModel"
-      />
-      <span *ngIf="newPassword1" class="password-complexity">
-        Password complexity:
-        <span [ngClass]="getPasswordComplexityClass(newPassword1)">
-          {{ getPasswordComplexityText(newPassword1) }}
-        </span>
-      </span>
-      <div *ngIf="newPassword1Input.invalid && (newPassword1Input.dirty || newPassword1Input.touched)" class="text-danger">
-        New Password is required.
-      </div>
-    </div>
-  </div>
-  <div class="form-group row">
-    <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password:</label>
-    <div class="col-sm-3">
-    <input
-      type="password"
-      id="confirmNewPassword1"
-      name="confirmNewPassword1"
-      class="form-control"
-      [(ngModel)]="confirmNewPassword1" maxlength="12"
-      required #confirmNewPassword1Input="ngModel"
-    />
-    <span *ngIf="confirmNewPassword1" class="password-complexity">
-      Password complexity: 
-      <span [ngClass]="getPasswordComplexityClass(confirmNewPassword1)">
-          {{ getPasswordComplexityText(confirmNewPassword1) }}
-      </span>
-  </span>
-    <div *ngIf="confirmNewPassword1Input.invalid && (confirmNewPassword1Input.dirty || confirmNewPassword1Input.touched)" class="text-danger">
-        Confirm new Password is required.
-      </div>
-    </div>
-  </div>
-    </div>
-    <div class="form-group row my-4">
-        <div class="col-sm-10 offset-sm-2">
-            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">
-                Cancel
-              </button>
-  <button type="submit" class="btn btn-primary" [disabled]="!fm1.form.valid">Change Password</button>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="newPassword1" class="col-sm-2 col-form-label">New Password:</label>
+            <div class="col-sm-3">
+              <input type="password" id="newPassword1" name="newPassword1" class="form-control"
+                [(ngModel)]="newPassword1" maxlength="12" required #newPassword1Input="ngModel" />
+              <span *ngIf="newPassword1" class="password-complexity">
+                Password complexity:
+                <span [ngClass]="getPasswordComplexityClass(newPassword1)">
+                  {{ getPasswordComplexityText(newPassword1) }}
+                </span>
+              </span>
+              <div *ngIf="newPassword1Input.invalid && (newPassword1Input.dirty || newPassword1Input.touched)"
+                class="text-danger">
+                New Password is required.
+              </div>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password:</label>
+            <div class="col-sm-3">
+              <input type="password" id="confirmNewPassword1" name="confirmNewPassword1" class="form-control"
+                [(ngModel)]="confirmNewPassword1" maxlength="12" required #confirmNewPassword1Input="ngModel" />
+              <span *ngIf="confirmNewPassword1" class="password-complexity">
+                Password complexity:
+                <span [ngClass]="getPasswordComplexityClass(confirmNewPassword1)">
+                  {{ getPasswordComplexityText(confirmNewPassword1) }}
+                </span>
+              </span>
+              <div
+                *ngIf="confirmNewPassword1Input.invalid && (confirmNewPassword1Input.dirty || confirmNewPassword1Input.touched)"
+                class="text-danger">
+                Confirm new Password is required.
+              </div>
+            </div>
+          </div>
         </div>
+        <div class="form-group row my-4">
+          <div class="col-sm-10 offset-sm-2">
+            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">
+              Cancel
+            </button>
+            <button type="submit" class="btn btn-primary" [disabled]="!fm1.form.valid">Change Password</button>
+          </div>
+        </div>
+      </form>
     </div>
-</form>
+  </div>
 </div>
-</div>
-</div>
-  
