Changes of blocking edit or existing documents in repository

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
@@ -63,7 +63,7 @@
               <td class="text-center" *ngIf="access">
                 <i (click)="editdoc(doc)" class="bi bi-pencil"></i>
               </td>
-              <td *ngIf="!access">
+              <td *ngIf="!access && doc?.entityName.toLowerCase=='existing document'">
                 <i class="bi bi-lock bi-lg"
                    [ngClass]="{'text-primary':true}"
                    title="No Permissions">
