--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -46,7 +46,7 @@
             </label>
             <div class="col-sm-10">
               <p-dropdown name="docType" [options]="preparations" [(ngModel)]="print.documentNumber"
-                          optionLabel="documentno" optionValue="documentno" (onChange)="documentNumberChange($event)"
+                          optionLabel="documentno" optionValue="documentno" (onChange)="documentNumberChange($event,printType)"
                           [autoDisplayFirst]="false" [required]="true" placeholder="Select Document No"
                           #documentnoInput="ngModel" [disabled]="viewMode">
               </p-dropdown>
@@ -181,20 +181,138 @@
 
 
           <!-- Bulk option controls start here -->
-          <fieldset *ngIf="printType != 'single'" [disabled]="printType == 'single'">
-           <div class="form-group row">
-             <label for="prefix" class="col-sm-2 col-form-label">Existing Document No<span style="color: red; font-weight: bolder;">*</span></label>
-             <div class="col-sm-10">
-               <p-dropdown name="docType" [options]="preparations1" [(ngModel)]="print.existingdocumentNumber"
-                 (onChange)="documentNumberChange($event)" [autoDisplayFirst]="false" [required]="true"
-                 placeholder="Select Existing Document No" #documentnoInput="ngModel" [disabled]="viewMode">
-               </p-dropdown>
-               <div *ngIf="documentnoInput.invalid && (documentnoInput.dirty || documentnoInput.touched)" class="text-danger">
-                 Existing Document Number is required.
+           <fieldset *ngIf="printType != 'single'" [disabled]="printType == 'single'">
+             <div class="form-group row">
+               <label for="prefix" class="col-sm-2 col-form-label">Existing Document No<span style="color: red; font-weight: bolder;">*</span></label>
+               <div class="col-sm-10">
+                 <p-dropdown name="docType" [options]="preparations1" [(ngModel)]="print.existingdocumentNumber"
+                             (onChange)="documentNumberChange($event,printType)" [autoDisplayFirst]="false" [required]="true"
+                             placeholder="Select Existing Document No" #documentnoInput="ngModel" [disabled]="viewMode">
+                 </p-dropdown>
+                 <div *ngIf="documentnoInput.invalid && (documentnoInput.dirty || documentnoInput.touched)" class="text-danger">
+                   Existing Document Number is required.
+                 </div>
                </div>
              </div>
-           </div>
-         </fieldset>
+
+             <div class="form-group row">
+               <label for="documentTitle" class="col-sm-2 col-form-label">Document Title</label>
+               <div class="col-sm-10">
+                 <input type="text" class="form-control" id="documentTitle" name="documentTitle"
+                        placeholder="Document Title" [(ngModel)]="print.documenttitle" [disabled]="'true'" />
+               </div>
+             </div>
+
+
+             <div class="form-group row">
+               <label for="prefix" class="col-sm-2 col-form-label">Document Type</label>
+               <div class="col-sm-10">
+                 <input type="text" class="form-control" id="print" name="printType" placeholder="Document Type"
+                        [(ngModel)]="print.printtype" [disabled]="'true'" />
+               </div>
+             </div>
+
+             <div class="form-group row">
+               <label for="noofcopies" class="col-sm-2 col-form-label">
+                 No Of Copies requested<span style="color: red; font-weight: bolder;">*</span>
+               </label>
+               <div class="col-sm-10">
+                 <input type="number" class="form-control" id="noofcopies" name="noofcopies" placeholder=""
+                        [(ngModel)]="print.noofcopies" [disabled]="viewMode" #noofcopiesInput="ngModel" required placeholder="Choose No Of Copies" min="1" max="9" />
+                 <div *ngIf="noofcopiesInput.invalid && (noofcopiesInput.dirty || noofcopiesInput.touched)" class="text-danger">
+                   No Of Copies is required.
+                 </div>
+               </div>
+             </div>
+
+
+
+             <div class="form-group row">
+               <label for="workflow" class="col-sm-2 col-form-label">Print Type<span style="color: red; font-weight: bolder;">*</span></label>
+               <div class="col-sm-10">
+                 <!-- <p-multiSelect
+        [options]="stageSource"
+        [(ngModel)]="selectedStage"
+        placeholder="Select Print Type"
+        name="workflowStage"
+        optionLabel="value"
+        display="chip"
+        [required]="true"
+        #documentstage="ngModel">
+      </p-multiSelect>
+      <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
+        Document Stage is required
+      </div> -->
+                 <p-dropdown name="PrintType" [options]="stageSource" [(ngModel)]="print.printCopy"
+                             optionLabel="label" optionValue="label" placeholder="Select Print Type" [autoDisplayFirst]="false" [required]="true"
+                             #documentstage="ngModel" [disabled]="viewMode">
+                 </p-dropdown>
+                 <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
+                   Print Type is required.
+                 </div>
+               </div>
+             </div>
+             <div class="form-group row" *ngIf="!editMode && !viewMode">
+               <label for="prefix" class="col-sm-2 col-form-label">
+                 Workflow<span style="color: red; font-weight: bolder;">*</span>
+               </label>
+               <div class="col-sm-10">
+                 <div class="col-sm-10">
+                   <p-dropdown name="workflow" [options]="workflowsSource" [(ngModel)]="print.workflow"
+                               optionLabel="workflowName" optionValue="workflowName" placeholder="Select Workflow" [autoDisplayFirst]="false" [required]="true"
+                               #WorkflowInput="ngModel" [disabled]="viewMode">
+                   </p-dropdown>
+                   <div *ngIf="WorkflowInput.invalid && (WorkflowInput.dirty || WorkflowInput.touched)" class="text-danger">
+                     Workflow is required.
+                   </div>
+                 </div>
+               </div>
+             </div>
+
+             <div class="form-group row">
+               <label for="documentType" class="col-sm-2 col-form-label">
+                 Reason<span style="color: red; font-weight: bolder;">*</span>
+               </label>
+               <div class="col-sm-10">
+                 <input type="text" class="form-control" id="reason" name="Reason" placeholder="Give Reason"
+                        [(ngModel)]="print.reason" [disabled]="viewMode" #reasonInput="ngModel" required maxlength="249" />
+                 <div *ngIf="reasonInput.invalid && (reasonInput.dirty || reasonInput.touched)" class="text-danger">
+                   Give Print Reason.
+
+                 </div>
+               </div>
+             </div>
+
+             <!-- Batch Number -->
+
+             <div class="form-group row">
+               <label for="batchNumber" class="col-sm-2 col-form-label">
+                 Batch Number<span style="color: red; font-weight: bolder;">*</span>
+               </label>
+               <div class="col-sm-10">
+                 <input type="text" class="form-control" id="reason" name="BatchNumber" placeholder="Batch Number"
+                        [(ngModel)]="print.batchNumber" [disabled]="viewMode" #reasonInput="ngModel" required maxlength="249" />
+                 <div *ngIf="reasonInput.invalid && (reasonInput.dirty || reasonInput.touched)" class="text-danger">
+                   Batch Number
+                 </div>
+               </div>
+             </div>
+
+             <!-- Batch Size -->
+
+             <div class="form-group row">
+               <label for="batchsize" class="col-sm-2 col-form-label">
+                 Batch Size<span style="color: red; font-weight: bolder;">*</span>
+               </label>
+               <div class="col-sm-10">
+                 <input type="text" class="form-control" id="reason" name="BatchSize" placeholder="Batch Size"
+                        [(ngModel)]="print.batchSize" [disabled]="viewMode" #reasonInput="ngModel" required maxlength="249" />
+                 <div *ngIf="reasonInput.invalid && (reasonInput.dirty || reasonInput.touched)" class="text-danger">
+                   Batch Number
+                 </div>
+               </div>
+             </div>
+           </fieldset>
          
          <!-- Bulk option controls end here -->
          
@@ -221,7 +339,7 @@
 <ng-template #template>
   <div class="modal-header">
     <h4 class="modal-title pull-left">Preview</h4>
-    <button type="button" class="close pull-right" style="padding-left:660px;" aria-label="Close" (click)="closeModel()">
+    <button type="button" class="close pull-right" style="padding-left:5px;" aria-label="Close" (click)="closeModel()">
       <span aria-hidden="true">×</span>
     </button>
   </div>
