--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -105,14 +105,6 @@
                      [(ngModel)]="effective.reviewDate" [disabled]="viewMode" />
             </div>
           </div>
-
-
-
-
-
-
-
-
           <div class="form-group row">
             <label for="workflow" class="col-sm-2 col-form-label">Workflow</label>
             <!-- <div class="col-sm-10">
@@ -129,6 +121,14 @@
               Workflow is required.
             </div>
           </div>
+
+          <div class="form-group row">
+            <label for="Reason" class="col-sm-2 col-form-label">Reason</label>
+            <div class="col-sm-10">
+              <textarea class="form-control mw-350" id="Reason" name="Reason" rows="3" placeholder="Reason"
+                        [(ngModel)]="effective.reason" [disabled]="viewMode"></textarea>
+            </div>        
+        </div>
           <!-- <div class="form-group row">
             <label for="workflow" class="col-sm-2 col-form-label"
               >Workflow</label
