--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -169,7 +169,7 @@
               <input type="text" class="form-control" id="reason" name="BatchSize" placeholder="Batch Size"
                      [(ngModel)]="print.batchSize" [disabled]="viewMode" #reasonInput="ngModel" required maxlength="249" />
               <div *ngIf="reasonInput.invalid && (reasonInput.dirty || reasonInput.touched)" class="text-danger">
-                Batch Number
+                Batch Size
               </div>
             </div>
           </div>
@@ -269,7 +269,7 @@
                </div>
              </div>
 
-             <div class="form-group row">
+             <!--<div class="form-group row">
                <label for="documentType" class="col-sm-2 col-form-label">
                  Reason<span style="color: red; font-weight: bolder;">*</span>
                </label>
@@ -281,7 +281,7 @@
 
                  </div>
                </div>
-             </div>
+             </div>-->
 
              <!-- Batch Number -->
 
@@ -316,13 +316,13 @@
          
          <!-- Bulk option controls end here -->
          
-         <div class="form-group row">
+         <!--<div class="form-group row">
           <label for="Reason" class="col-sm-2 col-form-label">Reason</label>
           <div class="col-sm-10">
             <textarea class="form-control mw-350" id="Reason" name="Reason" rows="3" placeholder="Reason"
                       [(ngModel)]="print.reason" [disabled]="viewMode"></textarea>
           </div>        
-      </div>
+      </div>-->
 
 
           <div class="form-group row my-4">
