--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -122,7 +122,7 @@
             </div>
           </div>
 
-          <div class="form-group row">
+          <div class="form-group row" *ngIf="viewMode">
             <label for="Reason" class="col-sm-2 col-form-label">Reason</label>
             <div class="col-sm-10">
               <textarea class="form-control mw-350" id="Reason" name="Reason" rows="3" placeholder="Reason"
