--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -169,11 +169,11 @@
               
             </div>
 
-            <div class="form-group row">
+            <div class="form-group row" *ngIf="viewMode" >
               <label for="Reason" class="col-sm-2 col-form-label">Reason</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="Reason" name="Reason"
-                       [(ngModel)]="preparation.reason"  [disabled]="viewMode" />             
+                       [(ngModel)]="preparation.reason"   />             
               </div>        
           </div>
 
