--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
@@ -9,7 +9,7 @@
       <form (ngSubmit)="changePassword()" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
           <div class="form-group row">
-            <label for="currentPassword" class="col-sm-2 col-form-label">Current Password:</label>
+            <label for="currentPassword" class="col-sm-2 col-form-label">Current Password<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-3">
               <input type="password" id="currentPassword" name="currentPassword" class="form-control"
                 [(ngModel)]="currentPassword" required #currentPasswordInput="ngModel" />
@@ -21,7 +21,7 @@
           </div>
           <div class="form-group row">
             <label for="newPassword" class="col-sm-2 col-form-label">New
-              Password:{{securityType.MinimumPasswordLength}}</label>
+              Password:{{securityType.MinimumPasswordLength}}<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-3">
               <input type="password" id="newPassword" name="newPassword" class="form-control" [(ngModel)]="newPassword"
                 minlength="{{securityType.MinimumPasswordLength}}" 
@@ -48,7 +48,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password:</label>
+            <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-3">
               <input type="password" id="confirmNewPassword" name="confirmNewPassword" class="form-control"
                 [(ngModel)]="confirmNewPassword" minlength="{{securityType.MinimumPasswordLength}}" maxlength="12"
@@ -85,7 +85,7 @@
       <form (ngSubmit)="changePasswordOther()" #fm1="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
           <div class="form-group row">
-            <label for="currentPassword" class="col-sm-2 col-form-label">Select User:</label>
+            <label for="currentPassword" class="col-sm-2 col-form-label">Select User<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <p-dropdown name="UserID" [options]="griddata" [(ngModel)]="otherUser" optionLabel="UserID"
                 placeholder="Select a User">
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="newPassword1" class="col-sm-2 col-form-label">New Password:</label>
+            <label for="newPassword1" class="col-sm-2 col-form-label">New Password<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-3">
               <input type="password" id="newPassword1" name="newPassword1" class="form-control"
                 [(ngModel)]="newPassword1" maxlength="12" required #newPassword1Input="ngModel" />
@@ -121,7 +121,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password:</label>
+            <label for="confirmNewPassword" class="col-sm-2 col-form-label">Confirm New Password<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-3">
               <input type="password" id="confirmNewPassword1" name="confirmNewPassword1" class="form-control"
                 [(ngModel)]="confirmNewPassword1" maxlength="12" required #confirmNewPassword1Input="ngModel" />
