--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/login/login.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/login/login.component.html
@@ -39,7 +39,7 @@
           autocomplete="off"         
           required
         />
-        <!-- <label class="floating-label">Password</label> -->
+         <label class="floating-label">Password</label> 
       </div>
 
       <!-- <div class="mb-2 f-pwd">
