--- a/VlimsApp/ClientApp/src/app/modules/manager/components/auditrequestgridpage/auditrequestgridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/auditrequestgridpage/auditrequestgridpage.component.html
@@ -39,7 +39,7 @@
                         <tr>
                             <th>S.No</th>
                             <!-- <th pSortableColumn="EntityName" style="width:20%">Request Code <p-sortIcon field="Entity Name"></p-sortIcon></th> -->
-                            <th pSortableColumn="Unique" style="width:20%">Document Type <p-sortIcon field="Unique"></p-sortIcon></th>
+                            <th pSortableColumn="Unique" style="width:20%">Request ID <p-sortIcon field="Unique"></p-sortIcon></th>
                             <th pSortableColumn="department" style="width:20%">Department <p-sortIcon field="department"></p-sortIcon></th>
                              <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th> -->
                              <!-- <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
