--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="form-group row">
-              <label for="workflow" class="col-sm-2 col-form-label">Workflow</label>
+              <label for="workflow" class="col-sm-2 col-form-label">Workflow<span style="color: red; font-weight: bolder;">*</span></label>
               <!-- <div class="col-sm-10">
                 <input type="text" class="form-control" id="Workflow" name="Workflow" [(ngModel)]="preparation.wokflow"
                   readonly [disabled]="viewMode"/>
