--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
@@ -34,13 +34,13 @@
                 [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
               <ng-template pTemplate="header">
                 <tr>
-                  <th>S.No</th>
-                  <th pSortableColumn="DepartmentName" style="width:20%">Department Name<p-sortIcon field="DepartmentName"></p-sortIcon></th>
-                  <th pSortableColumn="DepartmentCode" style="width:10%">Department Code<p-sortIcon field="DepartmentCode"></p-sortIcon> </th>
+                  <th style="width:40px">S.No</th>
+                  <th pSortableColumn="DepartmentName" >Department Name<p-sortIcon field="DepartmentName"></p-sortIcon></th>
+                  <th pSortableColumn="DepartmentCode" >Department Code<p-sortIcon field="DepartmentCode"></p-sortIcon> </th>
                   <!-- <th pSortableColumn="Comments" style="width:15%">Comments<p-sortIcon field="Comments"></p-sortIcon></th> -->
-                  <th pSortableColumn="ModifiedBy" style="width:20%">Registered By<p-sortIcon field="ModifiedBy"></p-sortIcon></th>
-                  <th pSortableColumn="ModifiedDate" style="width:1n00px">Registered On <p-sortIcon field="ModifiedDate"></p-sortIcon></th>
-                  <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+                  <th pSortableColumn="ModifiedBy" >Registered By<p-sortIcon field="ModifiedBy"></p-sortIcon></th>
+                  <th pSortableColumn="ModifiedDate" >Registered On <p-sortIcon field="ModifiedDate"></p-sortIcon></th>
+                  <th pSortableColumn="Status" >Status <p-sortIcon field="Status"></p-sortIcon></th>
                   <th style="width:80px">Modify</th>
                 </tr>
               </ng-template>
