--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/auditsetfuncprofilegridpage/auditsetfuncprofilegridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/auditsetfuncprofilegridpage/auditsetfuncprofilegridpage.component.html
@@ -37,14 +37,14 @@
                 [rowHover]="true">
                     <ng-template pTemplate="header">
                         <tr>
-                            <th>S.No</th>
+                            <th style="width:100px;">S.No</th>
                             
-                             <th pSortableColumn="EntityName" style="width:20%">Role Name<p-sortIcon field="EntityName"></p-sortIcon></th>
+                             <th pSortableColumn="EntityName" style="width:30%">Role Name<p-sortIcon field="EntityName"></p-sortIcon></th>
                              <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
                              <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
 
-                             <th pSortableColumn="UserName" style="width:20%">Initiated By<p-sortIcon field="UserName"></p-sortIcon></th>
-                             <th pSortableColumn="UserName" style="width:20%">Initiated On<p-sortIcon field="UserName"></p-sortIcon></th>
+                             <th pSortableColumn="UserName" style="width:30%">Initiated By<p-sortIcon field="UserName"></p-sortIcon></th>
+                             <th pSortableColumn="UserName" style="width:30%">Initiated On<p-sortIcon field="UserName"></p-sortIcon></th>
     
                         </tr>
                     </ng-template>
