--- a/VlimsApp/ClientApp/src/app/layout/left-nav/left-nav.component.scss
+++ b/VlimsApp/ClientApp/src/app/layout/left-nav/left-nav.component.scss
@@ -1,9 +1,3 @@
-.toggle-nav {
-  position: fixed;
-  top: 15px;
-  left: 15px;
-}
-
 .left-nav {
   position: fixed;
   top: 55px;
@@ -13,6 +7,7 @@
   background-color: #305496;
   transition: transform 0.3s ease;
   z-index: 1;
+  overflow-y: auto; /* Add this line to enable vertical scrollbar */
 
   .navbar-nav {
     width: 100%;
@@ -58,7 +53,7 @@
           .bi {
             position: absolute;
             right: 15px;
-            top:15px;
+            top: 15px;
             font-size: 10px;
             color: #d0e1ff;
           }
