--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
@@ -28,27 +28,27 @@
       <div class="col">
           <div class="p-4 bg-white shadow-dark rounded-2">
             <p-table #templatesTable [value]="types" 
-        [globalFilterFields]="['FirstName', 'LastName', 'UserID','Department','Empid','EmailId','ModifiedBy']"
-        tableStyleClass="table table-striped" [rows]="itemsPerPage"
-            [paginator]="true" [totalRecords]="types.length"
-            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
+               [globalFilterFields]="['FirstName', 'LastName', 'UserID','Department','Empid','EmailId','ModifiedBy']"
+               tableStyleClass="table table-striped" [rows]="itemsPerPage"
+               [paginator]="true" [totalRecords]="types.length"
+               [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
           <ng-template pTemplate="header">
             <tr>
-              <th>S.No</th>              
-              <th pSortableColumn="FirstName" style="width:10%">First Name<p-sortIcon field="FirstName"></p-sortIcon></th>
-              <th pSortableColumn="LastName" style="width:15%">Last Name<p-sortIcon field="LastName"></p-sortIcon></th>
+              <th style="width:40px">S.No</th>              
+              <th pSortableColumn="FirstName" >First Name<p-sortIcon field="FirstName"></p-sortIcon></th>
+              <th pSortableColumn="LastName" >Last Name<p-sortIcon field="LastName"></p-sortIcon></th>
               
-              <th pSortableColumn="UserID" style="width:20%">User ID<p-sortIcon field="UserID"></p-sortIcon></th>
-              <th pSortableColumn="Department" style="width:200px">Department<p-sortIcon field="Department"></p-sortIcon></th>
-              <th pSortableColumn="Role" style="width:200px">Role <p-sortIcon field="Role"></p-sortIcon></th>
+              <th pSortableColumn="UserID" >User ID<p-sortIcon field="UserID"></p-sortIcon></th>
+              <th pSortableColumn="Department">Department<p-sortIcon field="Department"></p-sortIcon></th>
+              <th pSortableColumn="Role" >Role <p-sortIcon field="Role"></p-sortIcon></th>
 
-               <th pSortableColumn="Empid" style="width:200px">Employee Id<p-sortIcon field="Empid"></p-sortIcon></th>
-              <th pSortableColumn="EmailId" style="width:200px">E-Mail ID<p-sortIcon field="EmailId"></p-sortIcon></th>
+               <th pSortableColumn="Empid" >Employee Id<p-sortIcon field="Empid"></p-sortIcon></th>
+              <th pSortableColumn="EmailId" >E-Mail ID<p-sortIcon field="EmailId"></p-sortIcon></th>
               
               
              
-              <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
-              <th pSortableColumn="Action" style="width:200px">Modify<p-sortIcon field="Action"></p-sortIcon></th>
+              <th pSortableColumn="Status" >Status <p-sortIcon field="Status"></p-sortIcon></th>
+              <th pSortableColumn="Action" style="width:80px">Modify<p-sortIcon field="Action"></p-sortIcon></th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
