--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/functional-profile-add-page/functional-profile-add-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/functional-profile-add-page/functional-profile-add-page.component.html
@@ -34,146 +34,143 @@
                             </div>
   
                             
-  
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Security Management:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.securityConfig }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.securityConfig">
                                 </div>
                             </div>
   
-                        
   
                         
-
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Role Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.roleConfig }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.roleConfig">
                                 </div>
                             </div>
-
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Department Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.deptConfig }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.deptConfig">
                                 </div>
                             </div>
-
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Plant Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.plantMgmt }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.plantMgmt">
                                 </div>
                             </div>
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <strong>User Configuration :</strong>
+                                    <strong>User Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.userMgmt }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.userMgmt">
                                 </div>
                             </div>
-
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Activate/De-Activate:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.Activatestatus }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.Activatestatus">
                                 </div>
                             </div>
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Document Type Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.documentTypeConfig }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentTypeConfig">
                                 </div>
                             </div>
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Document Template Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.documentTemplateConfig }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentTemplateConfig">
                                 </div>
                             </div>
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Workflow Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.workflowConfig }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.workflowConfig">
                                 </div>
                             </div>
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Document Request Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.documentRequest }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentRequest">
                                 </div>
                             </div>
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Document Preparation Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.documentPreperation }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentPreperation">
                                 </div>
                             </div>
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Document Effective Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.documentEffective }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.documentEffective">
                                 </div>
                             </div>
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Document Repository:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.additionalTasks }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.additionalTasks">
                                 </div>
                             </div>
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <strong>Work Assignes To Me:</strong>
+                                    <strong>Work Assigned To Me:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.workItemsassigned }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.workItemsassigned">
                                 </div>
                             </div>
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <strong>Document Print Comfiguration:</strong>
+                                    <strong>Document Print Configuration:</strong>
                                 </div>
                                 <div class="col-sm-9">
-                                    {{ auditConfig.EntityInfo.downloadPrint }}
+                                    <input type="checkbox" [checked]="auditConfig.EntityInfo.downloadPrint">
                                 </div>
                             </div>
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Initiated By:</strong>
@@ -182,9 +179,7 @@
                                     {{ auditConfig.EntityInfo.CreatedBy }}
                                 </div>
                             </div>
-
-
-
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <strong>Initiated On:</strong>
@@ -193,7 +188,7 @@
                                     {{ auditConfig.EntityInfo.createddate | date:'dd/MM/yyyy HH:mm' }}
                                 </div>
                             </div>
-
+                            
 
 
                         </div>
