--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -40,7 +40,7 @@
                             <th pSortableColumn="TaskName" style="width:20%">Document Type/Number<p-sortIcon field="TaskName"></p-sortIcon></th>
                             <!-- <th pSortableColumn="Stage" style="width:10%">Stage<p-sortIcon field="Stage"></p-sortIcon></th> -->
                             <!-- <th pSortableColumn="assignedGroup" style="width:15%">Assigned Group <p-sortIcon field="assignedGroup"></p-sortIcon></th> -->
-                            <th pSortableColumn="initiatedBy" style="width:20%">Initiated By<p-sortIcon field="initiatedBy"></p-sortIcon></th>
+                            <th pSortableColumn="initiatedBy" style="width:20%">Initiated By</th>
                             <th pSortableColumn="InitiatedOn" style="width:200px">Initiated On<p-sortIcon field="InitiatedOn"></p-sortIcon></th>
                             <th pSortableColumn="InitiatedOn" style="width:200px">Assigned Type<p-sortIcon field="ActionType"></p-sortIcon></th>
                             <th pSortableColumn="Status" style="width:200px">Status<p-sortIcon field="Status"></p-sortIcon></th>
