--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -2,7 +2,9 @@
   <div class="row p-2">
 
     <div class="col d-flex justify-content-between align-items-center">
-      <h4 class="page-title">{{editMode? 'Modify': 'New' }} Document Request</h4>
+      <h4 class="page-title">
+        {{ editMode ? 'Modify Document Request' : (viewMode ? 'Document Request Approval' : 'New Document Request') }}
+      </h4>
       <div class="back-icon" style="margin-right: 10px;">
         <a href="javascript:void(0);" onclick="history.back();">
           <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
