--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -54,7 +54,7 @@
               <th pSortableColumn="status" style="width: 200px">
                 Status <p-sortIcon field="status"></p-sortIcon>
               </th>
-              <th class="text-center" style="width: 80px">Action</th>
+              <th class="text-center" style="width: 80px">Actions</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-effective let-i="rowIndex">
