--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -44,7 +44,7 @@
                         <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
                         <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
                         <th pSortableColumn="status" style="width:5%">Status <p-sortIcon field="status"></p-sortIcon></th>
-                        <th style="width:5%">Modify</th>
+                        <th  class="text-center"style="width:5%">Actions</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-docType let-i="rowIndex">
