--- a/VlimsApp/ClientApp/src/app/app.component.html
+++ b/VlimsApp/ClientApp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div appDisableRightClick>
+<div >
   <app-header *ngIf="isLoggedIn"></app-header>
 
   <button class="hamburger-icon toggle-nav" (click)="toggleSidenav()" *ngIf="isLoggedIn">
